[package]
name = "example-rest-grpc-multiplex"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.12"
futures = "0.3"
http = "0.2.9"
hyper = { version = "0.14", features = ["full"] }
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tonic = "0.9"
tonic-reflection = "0.9"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.9", features = ["prost"] }
